DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2011-01-29 patrick     Fixed a bug in Cocoa keyboard/mouse event handling where
                       where the mask for mouse events could be computed
                       incorrectly.
2011-01-17 patrick     gadget::DigitalEventInterface now generates events with
                       the appropriate state when the associated digital device
                       unit is toggled on and off.
                       NEW VERSION: 2.1.13
2011-01-17 patrick     gadget::BasicEventGenerator instances now create an
                       instance of their sample handler so that the sample
                       handler's can track state.
                       NEW VERSION: 2.1.12
2010-12-09 patrick     Changed the multi-click time to be an unsigned long
                       measured in milliseconds.
                       NEW VERSION: 2.1.11
2010-11-03 furlong.t   Added a barrier cluster plugin for general application
                       use.
                       NEW VERSION: 2.1.10
2010-10-17 aronb       Add a cluster plug-in that allows users to register
                       callbacks for asynchronous events.
                       NEW VERSION: 2.1.9
2010-08-07 patrick     Changed gadget::KeyboardMouseEventInterface to be a
                       class template to follow the model of all the other
                       event interface types. Its default collection tag is
                       still gadget::event::all_events_tag, and its default
                       generation tag is still gadget::event::immediate_tag.
                       NEW VERSION: 2.1.8
2010-08-07 patrick     Added gadget::AnalogEventInterface<C,G>,
                       gadget::CommandEventInterface<C,G> and
                       gadget::StringEventInterface<C,G>.
                       NEW VERSION: 2.1.7
2010-08-01 patrick     Added gadget::DigitalEventInterface<C,G>,